--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ auth.json
 /37th/public/attachment/*
 /37th/public/endorsement_letter/*
 /37th/storage/framework/*
+/37th/public/assets_website/img/StratPlan_2023-2028.pdf
